# yoke-examples

./: .gitignore  README.md  go.mod  go.sum  justfile
plugins/hello-plugin-go/: main.go  manifest.json
plugins/hello-plugin-python/: main.py  manifest.json  requirements.txt
plugins/hello-plugin-rust/: Cargo.toml  manifest.json
plugins/hello-plugin-rust/src/: main.rs
tools/: README.md
tools/tests/: conftest.py  pytest.ini  requirements.txt  test_integration.py  test_ws_watch_python.py
tools/ws-watch-go/: main.go
tools/ws-watch-python/: main.py  requirements.txt
tools/ws-watch-rust/: Cargo.toml
tools/ws-watch-rust/src/: main.rs
